# shouxiecuda

./: CMakeLists.txt  README.md  common.c  common.cpp  common.cpph  common.h  common.hpp  cuda_common.cu  cuda_common.cuh  dotmethod.cpp  dotmethod.h  master_atomic.cu  master_constant_stencil.cu  master_device_query.cu  master_dynamic_parallelism.cu  master_elapsed_time_events.cu  master_hello_cuda.cu  master_intro_smem.cu  master_matrix_transpose.cu  master_matrix_transpose.xlsx  master_memory_transfer.cu  master_misc_thrust_cub_reduction.cu  master_misc_thrust_cub_scan.cu  master_numeric_accuracy.cu  master_occupancy_test.cu  master_orig_matrix_transpose.cu  master_orig_sum_array_with_unified_memory.cu  master_reduction.cu  master_reduction_default_parallelism.cu  master_register_usage.cu  master_row_column_access_smem.cu  master_scan.cu  master_shfl.cu  master_simple_cuda_stream.cu  master_soa_aos.cu  master_stream_blocking_ornot.cu  master_sum_array.cu  master_sum_array_profile.cu  master_unique_index.cu  master_warp_divergency.cu  (+26 more)
common/: common.cpp  common.h  common.hpp  simd.cpp  simd.hpp
openacc/: CMakeLists.txt  epc_mass_sum.h
openacc/c/: CMakeLists.txt  epc_mass_main.c  epc_mass_sum.c
openacc/cplus/: CMakeLists.txt
openacc/cplus/epc_mass/: CMakeLists.txt  epc_mass_sum.h
opencl/: CMakeLists.txt  cl_common.c  cl_common.h  misc_opencl_device.cpp  misc_opencl_matmul.cpp  misc_opencl_sum_array.cpp
